tests/baselines/reference/classAbstractAccessor(target=es2015).errors.txt
classAbstractAccessor.ts(3,17): error TS1318: An abstract accessor cannot have an implementation.
classAbstractAccessor.ts(5,17): error TS1318: An abstract accessor cannot have an implementation.


==== classAbstractAccessor.ts (2 errors) ====
    abstract class A {
       abstract get a();
       abstract get aa() { return 1; } // error
                    ~~
!!! error TS1318: An abstract accessor cannot have an implementation.
       abstract set b(x: string);
       abstract set bb(x: string) {} // error
                    ~~
!!! error TS1318: An abstract accessor cannot have an implementation.
    }
    